# sample-aws

./: .env.example  .gitignore  Makefile  buf.gen.yaml  docker-compose.yml
dbdoc/: schema.json  user.md
proto/: buf.yaml
proto/auth-sample-aws/v1/: auth_sample_aws.proto
proto/aws/v1/: aws.proto
proto/sample-aws/v1/: sample_aws.proto
server/: Cargo.toml  Dockerfile  Dockerfile.migrate  Dockerfile.server  openapi.yml
server/migrations/: 20230826161800_example.sql  20230903144012_user.sql
server/migrations/docs/: README.md  example.md
server/src/: auth_service.rs  config.rs  dependency_injection.rs  gateway.rs  gen.rs  lib.rs  main.rs  route.rs  service.rs  usecase.rs  util.rs  web.rs
server/src/apperror/: error.rs
server/src/config/: environment.rs
server/src/domain/: model.rs  repository.rs
server/src/domain/model/: auth.rs  datetime.rs  example.rs  image.rs  mail.rs  user.rs  vector.rs
server/src/domain/repository/: auth.rs  cloud_stroage.rs  example.rs  user.rs
server/src/gateway/: aws_cognito.rs  aws_s3.rs  example.rs  user.rs
server/src/middleware/: log.rs
server/src/service/: aws.rs  sample_aws.rs
server/src/usecase/: auth.rs  aws.rs  example.rs  image.rs  sample_aws.rs
server/src/util/: uuid.rs
server/src/web/: api.rs  header.rs  schema.rs
server/src/web/api/: auth.rs  example.rs  image.rs
server/src/web/schema/: auth.rs  error_response.rs  example.rs  image.rs
