[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "macros", "sync", "signal"] }
tonic = "0.9.1"
dotenv = "0.15.0"
log = "0.4.17"
pbjson = "0.5.1"
env_logger = "0.10.0"
async-trait = "0.1.68"
sqlx = { version = "0.7.0", features = ["mysql", "runtime-tokio", "tls-native-tls", "chrono"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = "0.4.24"
chrono-tz = "0.8.2"
regex = "1.8.4"
pbjson-types = "0.5.1"
