[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.0"
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "macros", "sync", "signal"] }
tonic = "0.10.0"
dotenv = "0.15.0"
log = "0.4.17"
pbjson = "0.6.0"
env_logger = "0.10.0"
async-trait = "0.1.68"
sqlx = { version = "0.7.0", features = ["mysql", "runtime-tokio", "tls-native-tls", "chrono"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = "0.4.24"
chrono-tz = "0.8.2"
regex = "1.8.4"
pbjson-types = "0.6.0"
aws-config = "0.56.1"
aws-sdk-cognitoidentityprovider = "0.31.1"
aws-sdk-s3 = "0.31.1"
aws-types = "0.56.1"
base64 = "0.21.3"
hmac = "0.12.1"
sha2 = "0.10.7"
tonic-reflection = "0.10.0"
tonic-web = "0.10.0"
sqlx-core = "0.7.1"
axum = "0.6.20"
serde_json = "1.0.107"
hyper = "0.14.27"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
ulid = "1.1.0"
http = "0.2.9"
tower = "0.4.13"
futures = "0.3.28"
cookie = { version = "0.17.0", features = ["secure"] }
